traces/bug_376.txt
examples++-load/VTK_writer.cpp:340: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/VTK_writer.cpp:340:1: initialization of callDoLoadInit
338.    
339.   }
340. > LOADFUNC(Load_Init)

examples++-load/VTK_writer.cpp:340:1: call to DoLoadInit
338.    
339.   }
340. > LOADFUNC(Load_Init)

examples++-load/VTK_writer.cpp:340:1: call to addInitFunct
  338.    
  339.   }
  340. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
